# hmziq.rs

./: .eslintignore  .eslintrc.json  .firebaserc  .gitignore  .prettierrc  CLAUDE.md  DEBUG_SCATTER_TEXT.md  PROJECT_STATE.md  README.md  WASM_OPTIMIZATION_PLAN.md  WORKTREE_SETUP.md  firebase.json  netlify.toml  next.config.mjs  next.config.ts  package.json  plan.md  playwright.config.ts  tailwind.config.ts  tsconfig.json  vercel.json  vite-plugin-content.ts  vite.config.ts
.react-doctor/: false-positives.md
.serena/: project.yml
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
docs/: METEOR_SHOWER_REFACTOR_ARCHITECTURE.md  METEOR_SHOWER_REFACTOR_GUIDE.md  PERFORMANCE_TEST_RESULTS.md  PROJECT_STATE.md  UNIFIED_RENDERING_PLAN_COMPARISON.md  UNIFIED_RENDERING_V5_README.md  WASM_MASTER_OPTIMIZATION_PLAN.md  WASM_METEOR_OPTIMIZATION.md  WASM_NEBULA_OPTIMIZATION.md  WASM_OPTIMIZATION_PLAN.md  WASM_STARFIELD_OPTIMIZATION.md  WASM_UNIFIED_RENDERING_PLAN.md  WASM_UNIFIED_RENDERING_PLAN_V3.md  WASM_UNIFIED_RENDERING_PLAN_V4_COMPLETE.md  WASM_UNIFIED_RENDERING_PLAN_V4_COMPLETE_FINAL.md  WASM_UNIFIED_RENDERING_PLAN_V5_ULTRA_COMPLETE.md  expertise.md  meteor-shower-optimization-results.md  performance-optimization-plan.md  star-field-optimization-plan.md  star-field-optimization-results.md  star-field-performance-summary.md  wasm.md
hooks/: useReducedMotion.ts
legacy/: README.md  plan.md
lib/: wasm-simd-detection.ts
public/: _headers  robots.txt  sitemap.xml
scripts/: copy-wasm.js  copy-wasm.ts  fetch-github-stats.ts  generate-feeds.ts  inspect-wasm.js  test-simd.js
src/: router.tsx  (+2 more)
wasm/: Cargo.toml  README.md
wasm/src/: batch_transfer.rs  bezier.rs  lib.rs  math.rs  nebula_system.rs  particle_system.rs  particles.rs  physics_utils.rs  render_buffer.rs  render_pipeline.rs  scatter_text.rs  skill_system.rs  spatial.rs  star_field.rs
(+271 files in other folders)
