[package]
name = "hmziq-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
bitflags = "2.4"

# Math optimizations
packed_simd = { version = "0.3", package = "packed_simd_2", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "Window",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = []
simd = ["packed_simd"]