[package]
name = "hmziq-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
bitflags = "2.4"

[dependencies.web-sys]
version = "0.3"
features = ["console", "Performance", "Window"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
overflow-checks = false

[features]
default = ["simd"]
simd = []

[target.wasm32-unknown-unknown]
rustflags = [
    "-C",
    "target-feature=+simd128,+bulk-memory,+sign-ext,+mutable-globals",
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O4",
    "--one-caller-inline-max-function-size",
    "-1",
    "--inline-functions-with-loops",
    "--fast-math",
    "--converge",
]
